envio de dados para a IA